fix: prevent card overlap for responsivness

--- a/gamestar/static/css/style.css
+++ b/gamestar/static/css/style.css
@@ -186,27 +186,24 @@ input[type=range]+.thumb.active .value {
     font-weight: bold;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 601px) {
     #nav-logo {
         margin-top: 0.75rem;
     }
 
     .card {
-        width: 250px;
+        width: 240px;
     }
-
 }
 
 @media screen and (min-width: 993px) {
     .card {
         width: 220px;
     }
-
 }
 
 @media screen and (min-width: 1200px) {
     .card {
         width: 200px;
     }
-
 }
